--- a/BloggingApplication/src/main/resources/application.properties
+++ b/BloggingApplication/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/blog_app
-#spring.datasource.username=root
-#spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/blog_app
+spring.datasource.username=root
+spring.datasource.password=password
 
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
